[package]
name = "maccal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.29.0", features = ["chrono"]}
log = "0.4.17"
chrono = "0.4"
console_error_panic_hook = "0.1.6"
clap = {version = "4.3.11", features = ["derive"]}
